--- a/index.html
+++ b/index.html
@@ -17,63 +17,63 @@
     <main>
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Fora_Terreno.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Fora_Terreno.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Fora do Terreno</p>
         </section>
 
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Frente_Terreno_Dentro.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Frente_Terreno_Dentro.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Dentro do Terreno</p>
         </section>
 
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Frente_Area.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Frente_Area.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Área do Terreno</p>
         </section>
 
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Sala.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Sala.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Sala</p>
         </section>
 
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Banheiro.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Banheiro.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Banheiro</p>
         </section>
 
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Quarto_Emanoel.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Quarto_Emanoel.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Quarto Emanoel</p>
         </section>
 
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Quarto_Anderson.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Quarto_Anderson.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Quarto Anderson</p>
         </section>
 
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Quarto_Pais.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Quarto_Pais.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Quarto Pais</p>
         </section>
 
         <section class="section_comodo">
             <div class="video">
-                <video src="./src/assets/Traz_Terreno.mp4" alt="Sala_Antes" class="comodo" controls>
+                <video src="./src/assets/video/Traz_Terreno.mp4" alt="Sala_Antes" class="comodo" controls>
             </div>
             <p>Tráz do Terreno</p>
         </section>
